--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+/public/banner_videos
+/public/images
+/public/logo_images/
+/public/videos
+/public/poster_images
